<?xml version="1.0"?>
<package format="2">
  <name>land_rect_center</name>
  <version>0.0.0</version>
  <description>The landing package</description>
  <maintainer email="zhang5786445@163.com">chaos</maintainer>
  <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <!-- 这句话要注意添加 -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <!-- 这句话要注意添加 -->
  <exec_depend>message_generation</exec_depend>
  <export>
  </export>
</package>

